# advent-of-code-rs

./: Cargo.toml
src/: conf.rs  day01.rs  fetcher.rs  main.rs  solutions.rs
src/challenge/: mod.rs
src/menu/: mod.rs
src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  mod.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
