[package]
name = "advent-of-code-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
md5 = { version = "0.7.0" }
fancy-regex = { version = "0.13.0" }
chrono = "0.4.38"
crossterm = "0.27.0"
itertools = "0.13.0"
serde_json = "1.0.120"
confique = { version = "0.3.0", features = ["yaml"] }
serde = "1.0.215"
dirs = "5.0.1"
serde_yaml = "0.9.34"
regex = "1.11.1"
anyhow = "1.0.94"
